# openstates.org

./: .babelrc  .dockerignore  .editorconfig  .eslintrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  appspec.yml  conftest.py  deploy-newrelic.sh  docker-compose.yml  manage.py  mongo.yml  new-openstates.yml  node.Dockerfile  ocdapi.yml  openstates.yml  package-lock.json  package.json  populate_issue_resolver_patches.py  publish-image.sh  pyproject.toml  python.Dockerfile  requirements.txt  runtests.py  sample-user-patches.csv  setup.cfg  setup.py  tasks.py  webpack.common.js  webpack.config.js  webpack.dev.js  widget.html
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: feature_request.md  graphql-issue.md  graphql.md  site-issue.md  website.md
.github/workflows/: docker.yml  test.yml
admintools/: README.md  __init__.py  apps.py  common.py  issues.py  models.py  sample-user-patches.csv  urls.py  views.py
admintools/admintools/: urls.py
admintools/cli/: __init__.py
admintools/importers/: __init__.py  bills.py  common.py  orgs.py  people.py  posts.py  vote_events.py
admintools/migrations/: 0001_initial.py  0002_auto_20170602_2102.py  0002_auto_20170609_0055.py  0002_issueresolverpatch.py  0003_auto_20170604_0408.py  0003_auto_20170609_0137.py  0004_auto_20170609_1406.py  0004_auto_20170717_0624.py  0005_auto_20170609_2209.py  (+5 more)
ansible/: deploy.sh  openstates.yml
bulk/: admin.py  models.py  urls.py  views.py
bundles/: admin.py  models.py  urls.py  views.py
crowdsource/: apps.py  forms.py  issues.py  models.py  urls.py  views.py
dashboards/: models.py  urls.py  views.py
dataquality/: README.md  apps.py  issues.py  models.py  populate_issue_resolver_patches.py  urls.py  views.py
docker/: download-db.sh  init-db.sh  run-tests.sh  testdata.py
geo/: models.py  urls.py  views.py
graphapi/: common.py  core.py  legislative.py  middleware.py  optimization.py  schema.py  views.py
history/: models.py
inventory/: hosts
js/: api-dashboard.js  config.js  configurator.js  dashboards.js  find-your-legislator.js  follow-button.js  legislator-image.js  legislator-list.js  legislator-lookup.js  main.js  state-map.js  utils.js
openstates/: redirects.py  settings.py  test_settings.py  urls.py  wsgi.py
people_admin/: admin.py  diff.py  git.py  models.py  unmatched.py  urls.py  utils.py  views.py
profiles/: admin.py  apps.py  forms.py  middleware.py  models.py  tests.py  urls.py  utils.py  verifier.py  views.py
public/: apps.py  models.py  urls.py  utils.py  views.py
scripts/: docker_python.sh
shapefiles/: definitions.py  download.py  nh_12_crosswalk.csv
src/: index.js
static/: main.css
templates/: 404.html  429.html  500.html
testutils/: __init__.py  db.py  factories.py  fixtures.py  static.py
utils/: bills.py  cli.py  common.py  geo.py  orgs.py  people.py  websearchquery.py
v1/: compare.py  models.py  static.py  tests.py  urls.py  utils.py  views.py
web/: redirects.py  settings.py  test_settings.py  urls.py  wsgi.py
widgets/: .dockerignore  .gitignore  admin.py  docker-compose.yml  manage.py  models.py  package-lock.json  pyproject.toml  views.py
(+448 files in other folders)
