[tool.poetry]
name = "openstates.org"
version = "3.4"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.14"
django-cors-headers = "^3.7"
django-allauth = "^0.50.0"
django-recaptcha = "^3.0.0"
django-redis-cache = "^3.0.0"
graphene-django = "^2.15"
graphene-graphiql-explorer = "^0.0.1"
dj-database-url = "^0.5.0"
whitenoise = "^5.2"
pybase62 = "^0.4.3"
python-dateutil = "^2.8"
feedparser = "6.0.2"
boto3 = "^1.9"
newrelic = "^6.2"
bleach = "^3.1"
structlog = "^20.1.0"
colorama = "^0.4.3"
freezegun = "^0.3.15"
openstates = "6.17.8"
rrl = "^0.3.1"
PyGithub = "^1.54.1"
yamlordereddictloader = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-django = "^3.5"
flake8 = "^3.7"
ipython = "^7.31"
invoke = "^1.5.0"
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | openstates-postgres
  | node_modules
)/
'''
